fixed image not responsive, added animated slide down on 'calculate your score' button

--- a/css/express-entry.css
+++ b/css/express-entry.css
@@ -1,5 +1,5 @@
 .express-entry img{
-  /* width:100%; */
+  width:100%;
   margin-bottom: 1rem;
 }
 .express-entry p{
